kubernetes/deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: docker-sample
          image: docker.io/library/docker_sample:0.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            failureThreshold: 1
            periodSeconds: 10
          ports:
            - containerPort: 8080
          lifecycle:
            preStop:
              exec:
                command: [ "sleep", "30" ]
      terminationGracePeriodSeconds: 30
