kubernetes/service-config.yml
apiVersion: v1
kind: Service
metadata:
  name: service-config
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8080
      targetPort: 8080
